Add Internship section, Blog page, update icons and links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,11 +5,15 @@
             <ul class="contact-list">
                 <li>
                     <i class="fas fa-envelope"></i>
-                    <a href="mailto:{{ site.email }}">{{ site.email }}</a>
+                    <a href="mailto:harley_yang@stu.pku.edu.cn">harley_yang@stu.pku.edu.cn</a>
                 </li>
                 <li>
                     <i class="fab fa-github"></i>
-                    <a href="https://github.com/{{ site.github_username }}" target="_blank">GitHub</a>
+                    <a href="https://github.com/TidalHarley" target="_blank">GitHub</a>
+                </li>
+                <li>
+                    <i class="fas fa-graduation-cap"></i>
+                    <a href="https://scholar.google.com/citations?user=qHD7JVAAAAAJ&hl=zh-CN" target="_blank">Google Scholar</a>
                 </li>
                 <li>
                     <i class="fas fa-map-marker-alt"></i>
@@ -24,7 +28,7 @@
                 <li><a href="{{ '/' | relative_url }}">Home</a></li>
                 <li><span style="opacity: 0.5;">Publications (Coming Soon)</span></li>
                 <li><span style="opacity: 0.5;">Projects (Coming Soon)</span></li>
-                <li><a href="{{ '/cv' | relative_url }}">CV</a></li>
+                <li><a href="{{ '/blog' | relative_url }}">Blog</a></li>
             </ul>
         </div>
         
