--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,9 +32,9 @@
                     </span>
                 </li>
                 <li class="nav-item">
-                    <a href="{{ '/cv' | relative_url }}" class="nav-link {% if page.url contains 'cv' %}active{% endif %}">
-                        <i class="fas fa-file-alt"></i>
-                        <span>CV</span>
+                    <a href="{{ '/blog' | relative_url }}" class="nav-link {% if page.url contains 'blog' %}active{% endif %}">
+                        <i class="fas fa-blog"></i>
+                        <span>Blog</span>
                     </a>
                 </li>
             </ul>
