--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,50 +1,5 @@
 <footer class="site-footer">
-    <div class="footer-content">
-        <div class="footer-section">
-            <h4>Contact</h4>
-            <ul class="contact-list">
-                <li>
-                    <i class="fas fa-envelope"></i>
-                    <a href="mailto:harley_yang@stu.pku.edu.cn">harley_yang@stu.pku.edu.cn</a>
-                </li>
-                <li>
-                    <i class="fab fa-github"></i>
-                    <a href="https://github.com/TidalHarley" target="_blank">GitHub</a>
-                </li>
-                <li>
-                    <i class="fas fa-graduation-cap"></i>
-                    <a href="https://scholar.google.com/citations?user=qHD7JVAAAAAJ&hl=zh-CN" target="_blank">Google Scholar</a>
-                </li>
-                <li>
-                    <i class="fas fa-map-marker-alt"></i>
-                    <span>Peking University, Beijing</span>
-                </li>
-            </ul>
-        </div>
-        
-        <div class="footer-section">
-            <h4>Quick Links</h4>
-            <ul class="footer-links">
-                <li><a href="{{ '/' | relative_url }}">Home</a></li>
-                <li><span style="opacity: 0.5;">Publications (Coming Soon)</span></li>
-                <li><span style="opacity: 0.5;">Projects (Coming Soon)</span></li>
-                <li><a href="{{ '/blog' | relative_url }}">Blog</a></li>
-            </ul>
-        </div>
-        
-        <div class="footer-section">
-            <h4>Research Interests</h4>
-            <div class="research-tags">
-                <span class="tag">Embodied AI</span>
-                <span class="tag">VLN</span>
-                <span class="tag">Spatial Intelligence</span>
-                <span class="tag">Multimodal Learning</span>
-            </div>
-        </div>
-    </div>
-    
     <div class="footer-bottom">
-        <p>&copy; {{ site.time | date: '%Y' }} {{ site.title }}. All rights reserved.</p>
-        <p class="powered-by">Powered by <a href="https://jekyllrb.com" target="_blank">Jekyll</a></p>
+        <p>&copy; {{ site.time | date: '%Y' }} Haolin Yang</p>
     </div>
 </footer>
