--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,6 +19,9 @@
                 <li class="nav-item">
                     <a href="{{ '/cv/' | relative_url }}" class="nav-link {% if page.url contains 'cv' %}active{% endif %}">CV</a>
                 </li>
+                <li class="nav-item">
+                    <a href="{{ '/blog/' | relative_url }}" class="nav-link {% if page.url contains 'blog' %}active{% endif %}">Blog</a>
+                </li>
             </ul>
         </div>
     </nav>
